Refactoring and optimize import

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.abdulmughni.personal.myreads.core.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/wtr"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.abdulmughni.personal.myreads.core.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:name="com.abdulmughni.personal.myreads.core.ui.dashboard.CurrentReadsFragment"
+        android:label="@string/current"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.abdulmughni.personal.myreads.core.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:name="com.abdulmughni.personal.myreads.core.ui.notifications.ReadsFragment"
+        android:label="@string/read"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
